--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,20 +7,7 @@
 
     <div class="collapse navbar-collapse" [class.collapse]="collapsed" id="navbarContent">
         <ul class="navbar-nav ml-auto">
-            <li *ngIf="!user" class="nav-item">
-                <a class="nav-link" [routerLink]="'/login'">
-                    Login
-                </a>
-            </li>
-            <li ngbDropdown *ngIf="user" class="nav-item dropdown">
-                <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown01">
-                    {{ user.username }}
-                </a>
-                <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" [routerLink]="['/profile']">Profile</a>
-                    <a class="dropdown-item" [routerLink]="['/']" (click)="logout()">Log Out</a>
-                </div>
-            </li>
+            <app-navbar-profile [user]="loggedUser$ | async"></app-navbar-profile>
         </ul>
     </div>
   </nav>
