--- a/src/app/components/navbar-profile/navbar-profile.component.html
+++ b/src/app/components/navbar-profile/navbar-profile.component.html
@@ -5,7 +5,7 @@
 </li>
 <li ngbDropdown *ngIf="user" class="nav-item dropdown">
     <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown01">
-        {{ user.username }}
+        {{ user?.username }}
     </a>
     <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
         <a class="dropdown-item" [routerLink]="['/profile']">Profile</a>
