--- a/src/app/components/message-area/message-area.component.scss
+++ b/src/app/components/message-area/message-area.component.scss
@@ -44,6 +44,10 @@
         input {
             flex: 1;
         }
+
+        input:focus {
+            outline: none;
+        }
     }
     
     .other {
