Added minimal functionality to groups component

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" [class.collapse]="collapsed" id="navbarContent">
       <ul class="navbar-nav mr-auto">
         <li *ngIf="(loggedUser$ |async)" class="nav-item">
-          <a class="nav-link" [routerLink]="['/groups-room']">Groups Room</a>
+          <a class="nav-link" [routerLink]="['/messenger']">Messenger</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
