--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -11,7 +11,7 @@
     height: 60px;
   }
 .navbar-custom{
-    background-color: #3399FF;
+    background-color: #004d00;
     font-size: 20px;
     padding-right: 40px;
     padding-left: 40px;
