--- a/src/app/components/groups/groups.component.html
+++ b/src/app/components/groups/groups.component.html
@@ -1,2 +1,15 @@
-<h1>User details</h1>
-<p>{{ currentUser.username }}</p>
+<div class="card border-primary mb-3" style="max-width: 20rem;">
+    <div class="card-body text-primary">
+        <h2>{{ currentUser.username }}'s groups</h2>
+    </div>
+    <div class="list-group">
+      <ul class="list-group">
+        <li *ngFor="let group of groups" class="list-group-item">
+          <button (click)="changeGroup(group.id)" class="list-group-item list-group-item-action list-group-item-primary">
+            {{ group.name }}
+          </button>
+        </li>
+      </ul>
+    </div>
+</div>
+
