--- a/src/app/components/messenger/messenger.component.html
+++ b/src/app/components/messenger/messenger.component.html
@@ -1,2 +1,11 @@
-<h1>{{ (user$ | async).username }}</h1>
-<app-message-area [groupId]="groupId" [groupUsers]="groupUsers$ | async" [user]="user$ | async"></app-message-area>
+<div class="container">
+    <h1>{{ (user$ | async).username }}</h1>
+    <div>
+        <div style="float: left; width: 50%">
+            <app-groups (newGroupEvent)="changeGroup($event)" [groupId]="groupId" [groupUsers]="groupUsers$ | async" [user]="user$ | async" [userGroups]="userGroups$ | async"></app-groups>
+        </div>
+        <div style="float: right; width: 50%">
+            <app-message-area [groupId]="groupId" [groupUsers]="groupUsers$ | async" [user]="user$ | async"></app-message-area>
+        </div>
+    </div>
+</div>
