Centralized logged user as a subject

--- a/src/app/components/messenger/messenger.component.html
+++ b/src/app/components/messenger/messenger.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <h1>{{ (user$ | async).username }}</h1>
     <div>
         <div style="float: left; width: 50%">
@@ -8,4 +8,5 @@
             <app-message-area [groupId]="groupId" [groupUsers]="groupUsers$ | async" [user]="user$ | async"></app-message-area>
         </div>
     </div>
-</div>
+</div> -->
+messenger
