--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,12 +11,13 @@
 
     <div class="collapse navbar-collapse" [class.collapse]="collapsed" id="navbarContent">
       <ul class="navbar-nav mr-auto">
-        <li *ngIf="(loggedUser$ |async)" class="nav-item">
+        <li *ngIf="user" class="nav-item">
           <a class="nav-link" [routerLink]="['/messenger']">Messenger</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
-          <app-navbar-profile [user]="loggedUser$ | async"></app-navbar-profile>
+          <!-- <app-navbar-profile [user]="loggedUser$ | async"></app-navbar-profile> -->
+          <app-navbar-profile [user]="user"></app-navbar-profile> 
       </ul>
     </div>
   </nav>
