--- a/src/app/components/messenger/messenger.component.html
+++ b/src/app/components/messenger/messenger.component.html
@@ -1,12 +1,12 @@
-<!-- <div class="container">
-    <h1>{{ (user$ | async).username }}</h1>
+<div class="container">
+    <h1>{{ user?.username }}</h1>
     <div>
         <div style="float: left; width: 50%">
-            <app-groups (newGroupEvent)="changeGroup($event)" [groupId]="groupId" [groupUsers]="groupUsers$ | async" [user]="user$ | async" [userGroups]="userGroups$ | async"></app-groups>
+            <app-groups (newGroupEvent)="changeGroup($event)" [groupId]="groupId"
+                [user]="user" [userGroups]="userGroups$ | async"></app-groups>
         </div>
         <div style="float: right; width: 50%">
-            <app-message-area [groupId]="groupId" [groupUsers]="groupUsers$ | async" [user]="user$ | async"></app-message-area>
+            <!-- <app-message-area [groupId]="groupId" [groupUsers]="groupUsers$ | async" [user]="user$ | async"></app-message-area> -->
         </div>
     </div>
-</div> -->
-messenger
+</div>
