--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,22 +1,35 @@
 <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
-    <a class="navbar-brand" [routerLink]="['/']">
+    <a class="navbar-brand" *ngIf="user" [routerLink]="['/messenger']">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-square-text-fill" viewBox="0 0 16 16">
         <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.5a1 1 0 0 0-.8.4l-1.9 2.533a1 1 0 0 1-1.6 0L5.3 12.4a1 1 0 0 0-.8-.4H2a2 2 0 0 1-2-2V2zm3.5 1a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 2.5a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 2.5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5z"/>
       </svg>
       IMessage</a>
+
+      <a class="navbar-brand" *ngIf="!user" [routerLink]="['/']">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-square-text-fill" viewBox="0 0 16 16">
+          <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.5a1 1 0 0 0-.8.4l-1.9 2.533a1 1 0 0 1-1.6 0L5.3 12.4a1 1 0 0 0-.8-.4H2a2 2 0 0 1-2-2V2zm3.5 1a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 2.5a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 2.5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5z"/>
+        </svg>
+        IMessage</a>
     
       <button class="navbar-toggler" type="button" aria-controls="navbarContent" [attr.aria-expanded]="!collapsed" aria-label="Toggle navigation" (click)="collapsed = !collapsed">
         <span class="navbar-toggler-icon"></span>
       </button>
 
     <div class="collapse navbar-collapse" [class.collapse]="collapsed" id="navbarContent">
-      <ul class="navbar-nav mr-auto">
-        <li *ngIf="user" class="nav-item">
-          <a class="nav-link" [routerLink]="['/messenger']">Messenger</a>
-        </li>
-      </ul>
       <ul class="navbar-nav ml-auto">
-          <app-navbar-profile [user]="user"></app-navbar-profile> 
+        <li *ngIf="!user" class="nav-item">
+          <a class="nav-link" [routerLink]="'/signin'">
+              Login
+          </a>
+      </li>
+      <li *ngIf="user" class="nav-item">
+          <a class="nav-link" [routerLink]="['/profile']">
+              {{ user?.username }}
+          </a>
+      </li>
+      <li *ngIf="user" class="nav-item">
+          <a class="nav-link" [routerLink]="['/']" (click)="logout()">Log Out</a>
+      </li>
       </ul>
     </div>
   </nav>
