--- a/src/app/components/groups/groups.component.html
+++ b/src/app/components/groups/groups.component.html
@@ -1,10 +1,17 @@
 <div class="group-container">
   <div class="user-details">
-    <h2>{{ user?.username }}'s groups</h2>
-  </div>
-  <div *ngFor="let group of userGroups" class="btn-group" ngxInfiniteScroller strategy="scrollingToDown">
-    <button (click)="changeGroup(group.id)" class="button">
-      {{ group.name }}
+    <input class="title" disabled [value]="user?.username + '\'s groups'">
+    <button class="add-button">
+      <span class="material-icons">
+        add
+      </span>
     </button>
+  </div>
+  <div class="groups-list">
+    <div *ngFor="let group of userGroups" class="btn-group">
+      <button (click)="changeGroup(group.id)" class="button" [disabled]="group.id === groupId">
+        {{ group.name }}
+      </button>
+    </div>
   </div>
 </div>
