--- a/src/app/components/messenger/messenger.component.html
+++ b/src/app/components/messenger/messenger.component.html
@@ -1,12 +1,11 @@
-<div class="container">
-    <h1>{{ user?.username }}</h1>
-    <div>
-        <div style="float: left; width: 50%">
-            <app-groups (newGroupEvent)="changeGroup($event)" [groupId]="groupId"
-                [user]="user" [userGroups]="userGroups$ | async"></app-groups>
-        </div>
-        <div style="float: right; width: 50%; height: 100%">
-            <app-message-area [groupId]="groupId" [groupUsers]="groupUsers$ | async" [user]="user"></app-message-area>
-        </div>
+<div class="messenger-container">
+    <div class="groups-container">
+        <app-groups (newGroupEvent)="changeGroup($event)" [groupId]="groupId" [user]="user"
+            [userGroups]="userGroups$ | async" style="height: 450px">
+        </app-groups>
+    </div>
+    <div class="messages-container">
+        <app-message-area class="messages" [groupId]="groupId" [groupUsers]="groupUsers$ | async" [user]="user">
+        </app-message-area>
     </div>
 </div>
