--- a/src/app/components/groups/groups.component.scss
+++ b/src/app/components/groups/groups.component.scss
@@ -25,18 +25,6 @@
             border: 0;
             box-shadow: inset 0 0 4px #424242;
         }
-
-        .add-button {
-            border: 0;
-            background-color: white;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 40px;
-            width: 40px;
-            border-radius: 20px;
-            box-shadow: inset 0 0 4px #424242;
-        }
     }
 
     .groups-list {
@@ -81,4 +69,48 @@
 .groups-list::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.322);
+}
+
+.round-button {
+    border: 0;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
+    border-radius: 20px;
+}
+
+.round-button:hover {
+    background-color: rgb(235, 235, 235);
+}
+
+.add-button {
+    border: 0;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
+    border-radius: 20px;
+    box-shadow: inset 0 0 4px #424242;
+}
+
+.popover-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+
+    .input-group {
+        display: flex;
+        align-items: center;
+    }
+
+    .buttons-container {
+        display: flex;
+        justify-content: flex-end;
+        padding-top: 10px;
+    }
 }
