--- a/src/app/components/profile-display/profile-display.component.html
+++ b/src/app/components/profile-display/profile-display.component.html
@@ -1,11 +1,32 @@
 <div class="details">
-    <p>
+    <!-- <p>
         User ID: {{ user?.id }}
-    </p>
-    <p>
+    </p> -->
+    <!-- <p>
         Username: {{ user?.username }}
-    </p>
-    <p>
+    </p> -->
+
+    <!-- <p>
         User email: {{ user?.email }}
-    </p>
+    </p> -->
+        <div class="form-group">
+            <label for="username">User ID</label>
+            <div class="input-group-text">
+                <input #id="ngModel" [(ngModel)]="user.id" name="id" id="id" type="text" class="form-control" disabled>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="username">Email</label>
+            <div class="input-group-text">
+                <input #email="ngModel" [(ngModel)]="user.email" name="email" id="email" type="text" class="form-control" disabled>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="username">Username</label>
+            <div class="input-group-text">
+                <input #username="ngModel" [(ngModel)]="user.username" name="username" id="username" type="text" class="form-control">
+            </div>
+        </div>
+        <button type="button" class="btn btn-primary" (click)="saveProfile(username.value)">Save profile</button>
 </div>
