--- a/src/app/components/groups/groups.component.scss
+++ b/src/app/components/groups/groups.component.scss
@@ -44,7 +44,18 @@
                 color: white;
                 text-align: left;
                 width: 100%;
-                font-size: 20px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                .group-buttons-container {
+                    display: flex;
+
+                    .group-button {
+                        background-color: #00250a00;
+                        color: black;
+                    }
+                }
             }
 
             .button:hover {
@@ -54,6 +65,7 @@
             .button:disabled {
                 background-color: #94ffb1;
                 color: black;
+                font-weight: bold;
             }
         }
     }
