--- a/src/app/components/message-area/message-area.component.scss
+++ b/src/app/components/message-area/message-area.component.scss
@@ -10,7 +10,7 @@
     
         .message-container {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             margin: 5px;
 
             .message {
@@ -18,7 +18,7 @@
                 border-radius: 15px;
                 padding: 10px;
                 width: fit-content;
-                max-width: 50%;
+                max-width: 300px;
                 word-wrap: break-word;
                 box-shadow: 0 10px 15px black;
 
@@ -64,7 +64,7 @@
     }
     
     .other {
-        align-items: flex-start;
+        justify-content: flex-start;
 
         .message {
             background-color: #94ffb1;
@@ -73,7 +73,7 @@
     }
 
     .own {
-        align-items: flex-end;
+        justify-content: flex-end;
 
         .message {
             background-color: #096622;
@@ -88,7 +88,7 @@
     .input {
         padding: 15px;
         background-color: lightgrey;
-        border-radius: 15px;
+        border-radius: 15px 15px 0 0;
 
         .user-input {
             height: 40px;
