--- a/src/app/components/messenger/messenger.component.scss
+++ b/src/app/components/messenger/messenger.component.scss
@@ -1,4 +1,6 @@
 .messenger-container {
+    position: relative;
+
     height: 100%;
     display: flex;
     flex-direction: row;
@@ -15,10 +17,18 @@
     .messages-container {
         display: flex;
         flex: 1;
-        padding: 0 20px;
+        padding-left: 20px;
 
         .messages {
             flex: 1;
         }
     }
+}
+
+.fixed-alert {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+
 }
