--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,23 +1,52 @@
 <div class="container">
-<form [formGroup]="signupForm">
+<form [formGroup]="signupForm" (ngSubmit) = "onSubmit()">
     <div class="form-group">
         <label for="usernameImput">Username</label>
-        <input formControlName="username" type="email" class="form-control" id="usernameImput"
-            placeholder="Enter username">
+        <input 
+            formControlName="username"
+            type="email" 
+            class="form-control"
+            id="usernameImput"
+            placeholder="Enter username" 
+            required>
+        <div *ngIf="submitted && username.touched && username.invalid" class="alert alert-danger">Username is required</div>
     </div>
     <div class="form-group">
         <label for="emailInput">Email address</label>
-        <input formControlName="email" type="email" class="form-control" id="emailInput" placeholder="Enter email">
+        <input 
+            formControlName="email" 
+            type="email" 
+            class="form-control" 
+            id="emailInput" 
+            placeholder="Enter email"
+            required>
+        <div *ngIf="submitted && email.touched && email.invalid" class="alert alert-danger">
+            <div *ngIf="email.errors.required"> Email is required</div>
+            <div *ngIf="email.errors.email"> Email is not correct</div>
+        </div>
     </div>
     <div class="form-group">
         <label for="passwordInput">Password</label>
-        <input formControlName="password" type="password" class="form-control" id="passwordInput"
-            placeholder="Password">
+        <input 
+            formControlName="password" 
+            type="password" 
+            class="form-control" 
+            id="passwordInput"
+            placeholder="Password"
+            required>
+        <div *ngIf="submitted && password.touched && password.invalid" class="alert alert-danger">
+            <div *ngIf="password.errors.required">You have to set a password</div>
+            <div *ngIf="password.errors.minlength">Password should have more than {{ password.errors.minlength.requiredLength }} characters</div>
+        </div>
     </div>
     <div>
         <small>Already have an account? <a [routerLink]="['/signin']">Sign in</a></small>
     </div>
-    <button type="submit" class="btn btn-primary" (click)="validateForm()" [routerLink]="['/signin']"
-        [disabled]="signupForm.invalid">Sign Up</button>
+    <button 
+        type="submit" 
+        class="btn btn-primary" 
+        >
+        Sign Up
+    </button>
 </form>
 </div>
