--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -15,4 +15,6 @@
     font-size: 20px;
     padding-right: 40px;
     padding-left: 40px;
+    height: 54px;
+    box-shadow: 0 2px 10px #00250a;
 }
