--- a/src/app/components/signin/signin.component.scss
+++ b/src/app/components/signin/signin.component.scss
@@ -30,7 +30,7 @@ form:before {
     position: absolute;
     top: 0;
     width: 100%;
-    // background-color: rgba(0,0,0,0.3);
+    background-color: rgba(202, 189, 189,0.8);
     z-index: -1;
     border-radius: 10px;
 }
