--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,4 +1,5 @@
-<div class="container">
-<h1>Profile Page</h1>
-<app-profile-display [user]="loggedUser$ | async"></app-profile-display>
+<div class="profile-container">
+    <div class="container">
+        <app-profile-display [user]="loggedUser$ | async"></app-profile-display>
+    </div>
 </div>
