--- a/src/app/components/signup/signup.component.scss
+++ b/src/app/components/signup/signup.component.scss
@@ -11,11 +11,12 @@
         font-family: Arial, Helvetica, sans-serif;
         padding-top: 20px;
         padding-bottom: 20px;
-        //box-shadow: rgba(0, 0, 0, 0.5) 15px 10px 20px;
-        box-shadow: 0 10px 20px 5px #00250a;
-
+        background-color: rgba(202, 189, 189, 0.8);
+        box-shadow: rgba(0, 0, 0, 0.5) 15px 10px 20px;
         border-radius: 20px;
-        background-image: linear-gradient(180deg, #39C676 20%, #E4F2D5 10%);
         
+        //background-image: linear-gradient(180deg, #39C676 20%, #E4F2D5 10%);
+        // -webkit-box-shadow: 2px 2px 3px rgba(0,0,0,0.1);
+        // box-shadow: 10px 10px 20px rgba(0,0,0,0.1);
     }
 }
