--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -16,5 +16,5 @@
     padding-right: 40px;
     padding-left: 40px;
     height: 54px;
-    box-shadow: 0 2px 10px #00250a;
+    box-shadow: 0 0px 20px black;
 }
