--- a/src/app/components/profile-display/profile-display.component.scss
+++ b/src/app/components/profile-display/profile-display.component.scss
@@ -12,7 +12,7 @@
             font-family: Arial, Helvetica, sans-serif;
             padding-top: 20px;
             padding-bottom: 20px;
-            background-color: rgba(202, 189, 189, 0.7);
+            background-color: lightgrey;
             box-shadow: rgba(0, 0, 0, 0.5) 15px 10px 20px;
             border-radius: 20px;
             font-size: large;
