--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -1,7 +1,5 @@
 .profile-container{
     position: relative;
-    padding-top: 50px;
     height: 100%;
-    background-color: seagreen ;
-    background-image: linear-gradient(#1B4744, #061700, #39C676);
+    background-color: #00250a;
 }
