--- a/src/app/components/signin/signin.component.scss
+++ b/src/app/components/signin/signin.component.scss
@@ -1,10 +1,46 @@
-.signin-container{
-    position: relative;
+.background-container {
+    background-color: #00250a;
     height: 100%;
-    background-color: seagreen ;
-    background-image: linear-gradient(#1B4744, #061700, #39C676);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
+    .signin-container {
+        padding: 20px;
+        border-radius: 20px;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: lightgrey;
+        width: 670px;
+        height: fit-content;
+
+        .title-text:disabled {
+            width: 100%;
+            padding: 5px;
+            border-radius: 32px;
+            background-color: white;
+            border: 0;
+            color: black;
+            font-weight: bold;
+            text-align: center;
+            box-shadow: inset 0 0 4px #424242;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            .form-group {
+                width: 100%;
+            }
+        }
+    }
 }
+
 #cover {
     background: #222 center center no-repeat;
     background-size: cover;
@@ -15,25 +51,10 @@
     position: relative;
 }
 
-#cover-caption {
-    width: 100%;
-    position: relative;
-    z-index: 1;
-    padding-top: 100px;
+.alert-warning {
+    opacity: 70%;
 }
 
-/* only used for background overlay not needed for centering */
-form:before {
-    content: '';
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    background-color: rgba(202, 189, 189,0.8);
-    z-index: -1;
-    border-radius: 10px;
-}
-.alert-warning{
-    opacity: 70%;
+.box-shadow {
+    box-shadow: 3px 10px 10px black;
 }
